fixing color contrast issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,7 +15,7 @@
   /* colors */
   --primary-color: #ccc5b9;
   --secondary-color: #215b8a;
-  --highlight-color: #EB5E28;
+  --highlight-color: #8F3200;
   --dark-grey: #303030;
   
   /* sizes */
@@ -132,8 +132,8 @@ section {
   padding-top: 10px;
 }
 .image-wrapper {
-  background-color: var(--secondary-color);
-  border: solid 2px var(--dark-grey);
+  background-color: #508cbc;
+  border: solid 2px var(--secondary-color);
   width: 100%;
   height: 75%;
 }
@@ -153,7 +153,7 @@ section {
   #wrapper {
     background-color: white;
     max-width: 80%;
-    border: 3px solid var(--highlight-color);
+    border: 4px solid #e96632;
     border-radius: 7px;
     -webkit-border-radius: 7px;
     -moz-border-radius: 7px;
